Fix user dialog overflow

--- a/media/css/users.css
+++ b/media/css/users.css
@@ -11,3 +11,7 @@ body {
     bottom : 0;
 }
 
+#jce div.container {
+    height : 420px;
+    overflow: auto;
+}
